--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-        <div class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="nav navbar-nav ml-auto">
-                <li class="nav-item active">
+                <li class="nav-item active text-center">
                     <a class="nav-link" href="#">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item text-center">
                     <a class="nav-link" href="#">Missions</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item text-center">
                     <a class="nav-link" href="#">Topics</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item text-center">
                     <a class="nav-link" href="#">Media</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item text-center">
                     <a class="nav-link" href="#">About</a>
                 </li>
             </ul>
