--- a/index.html
+++ b/index.html
@@ -18,48 +18,243 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">
-            <img src="img/logo-silver.png" height="52" alt="">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="nav navbar-nav ml-auto">
-                <li class="nav-item active text-center">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item text-center">
-                    <a class="nav-link" href="#">Missions</a>
-                </li>
-                <li class="nav-item text-center">
-                    <a class="nav-link" href="#">Topics</a>
-                </li>
-                <li class="nav-item text-center">
-                    <a class="nav-link" href="#">Media</a>
-                </li>
-                <li class="nav-item text-center">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-            </ul>
-        </div>
-  </nav>
+    <header>
+        <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
+            <a class="navbar-brand" href="#">
+                <img src="img/logo-silver.png" height="52" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item active text-center">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link" href="#">Missions</a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link" href="#">Topics</a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link" href="#">Media</a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2 ml-auto" type="search" placeholder="Search" aria-label="Search" style="width: auto;">
+                    <button class="btn btn-outline-primary my-2 my-sm-0 mr-auto" type="submit"><i class="fa fa-search"></i></button>
+                </form>
+            </div>
+        </nav>
+    </header>
 
-    <div style="margin-top: 40vh;"></div>
-    <div class="text-center">
-        <h1>H1</h1>
-        <h2>H2</h2>
-        <h3>H3</h3>
-        <h4>H4</h4>
-        <h5>H5</h5>
-        <h6>H6</h6>
-        <p>Paragraph</p>
+    <div style="margin-top: 10vh;"></div>
+    <div class="container py-5">
+        <div class="row py-5">
+            <div class="col-12">
+                <div class="text-center">
+                    <h1>H1</h1>
+                    <h2>H2</h2>
+                    <h3>H3</h3>
+                    <h4>H4</h4>
+                    <h5>H5</h5>
+                    <h6>H6</h6>
+                    <p>Paragraph</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row py-5">
+            <div class="col-lg-6">
+                <h3>Happening Now</h3>
+                <img class="placeholder" width="100%" height="300px">
+                <p>Description</p>
+            </div>
+            <div class="col-lg-6">
+                <h3>Latest</h3>
+                <ul class="article-list-ver">
+                    <li>
+                        <a href="#" class="row article-item">
+                            <div class="col-3">
+                                <img class="placeholder" width="100px" height="100px">
+                            </div>
+                            <div class="col-9">
+                                <h4>Title</h4>
+                                <p>Description</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="row article-item">
+                            <div class="col-3">
+                                <img class="placeholder" width="100px" height="100px">
+                            </div>
+                            <div class="col-9">
+                                <h4>Title</h4>
+                                <p>Description</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="row article-item">
+                            <div class="col-3">
+                                <img class="placeholder" width="100px" height="100px">
+                            </div>
+                            <div class="col-9">
+                                <h4>Title</h4>
+                                <p>Description</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row py-5">
+            <div class="col-12 px-0">
+                <h3>Featured</h3>
+            </div>
+            <div class="card-deck">
+                <a href="#" class="card">
+                    <img class="card-img-top placeholder" width="100%" height="200px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </a>
+                <a href="#" class="card">
+                    <img class="card-img-top placeholder" width="100%" height="200px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </a>
+                <a href="#" class="card">
+                    <img class="card-img-top placeholder" width="100%" height="200px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <div class="row py-5">
+            <div class="col-12 px-0">
+                <h3>All Stories</h3>
+            </div>
+            <div class="card-columns">
+                <a href="#" class="card">
+                    <img class="card-img-top placeholder" width="100%" height="500px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </a>
+                <a href="#" class="card">
+                    <img class="card-img-top placeholder" width="100%" height="200px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </a>
+                <a href="#" class="card">
+                    <img class="card-img-top placeholder" width="100%" height="300px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </a>
+                <a href="#" class="card">
+                    <img class="card-img-top placeholder" width="100%" height="200px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </a>
+                <a href="#" class="card">
+                    <img class="card-img-top placeholder" width="100%" height="200px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </a>
+                <a href="#" class="card">
+                    <img class="card-img-top placeholder" width="100%" height="200px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </a>
+                <a href="#" class="card">
+                    <img class="card-img-top placeholder" width="100%" height="300px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </a>
+            </div>
+        </div>
     </div>
+
+    <footer>
+        <div class="container pt-5 pb-5">
+            <div class="row">
+                <div class="col-lg-4">
+                    <a href="#">
+                        <img src="img/logo-red.png" height="52" alt="">
+                    </a>
+                </div>
+                <div class="col-lg-8 float-lg-right">
+                    <ul class="nav wenavbar-nav">
+                        <nav class="navbar navbar-expand-lg navbar-dark ml-lg-auto">
+                            <div class="navbar-collapse" id="navbarNavFooter">
+                                <ul class="nav navbar-nav">
+                                    <li class="nav-item active">
+                                        <a class="nav-link" href="#">Home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">Missions</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">Topics</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">Media</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">About</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </nav>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <a href="https://github.com/mikojimnz/DIG4172C" target="_blank"><p class="text-center text-white">Developed by DIG4172C Group 3. All Rights Reserved.</p></a>
+            </div>
+        </div>
+    </footer>
   
 
 </body>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
