--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item active text-center">
-                        <a class="nav-link" href="#">Home</a>
-                    </li>
+                <ul class="nav navbar-nav">
                     <li class="nav-item text-center">
                         <a class="nav-link" href="#">Missions</a>
                     </li>
@@ -44,69 +41,80 @@
                         <a class="nav-link" href="#">About</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2 ml-auto" type="search" placeholder="Search" aria-label="Search" style="width: auto;">
-                    <button class="btn btn-outline-primary my-2 my-sm-0 mr-auto" type="submit"><i class="fa fa-search"></i></button>
+                <form class="form-inline my-2 my-lg-0 ml-auto center-on-mobile">
+                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search"></i></button>
+                    <input class="my-2 nav-search" type="search" placeholder="Search" aria-label="Search" style="width: auto;">
                 </form>
             </div>
         </nav>
     </header>
 
-    <div style="margin-top: 10vh;"></div>
     <div class="container py-5">
         <div class="row py-5">
-            <div class="col-12">
-                <div class="text-center">
-                    <h1>H1</h1>
-                    <h2>H2</h2>
-                    <h3>H3</h3>
-                    <h4>H4</h4>
-                    <h5>H5</h5>
-                    <h6>H6</h6>
-                    <p>Paragraph</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="row py-5">
             <div class="col-lg-6">
-                <h3>Happening Now</h3>
-                <img class="placeholder" width="100%" height="300px">
-                <p>Description</p>
+                <a href="#">
+                    <h5 class="article-subtitle">Hubble</h5>
+                    <h2>Hubble Sees the Eye of a Colorful Galaxy</h2>
+                    <img class="img-fluid article-img-lg" src="img/home-1.png" width="100%">
+                    <p class="article-desc">This finely detailed image shows the heart of NGC 1097, a barred spiral galaxy that lies about 48 million light-years from Earth in the constellation Fornax. This picture reveals the intricacy of the web of stars and dust at NGC 1097’s center, with the long tendrils of dust seen in a dark red hue...<a href="javascript:void();" class="article-more"><strong>read more</strong></a></p>
+                </a>
             </div>
+            
             <div class="col-lg-6">
-                <h3>Latest</h3>
+                <h3 class="article-section">Latest</h3>
                 <ul class="article-list-ver">
                     <li>
                         <a href="#" class="row article-item">
                             <div class="col-3">
-                                <img class="placeholder" width="100px" height="100px">
+                                <img class="article-img" src="img/home-2.jpg">
                             </div>
                             <div class="col-9">
-                                <h4>Title</h4>
-                                <p>Description</p>
+                                <p class="article-subtitle">Webb Telescope<i>3 hours ago</i></p>
+                                <h5>NASA’s Webb Reaches Alignment Milestone, Optics Working Successfully</h5>
                             </div>
                         </a>
                     </li>
                     <li>
                         <a href="#" class="row article-item">
                             <div class="col-3">
-                                <img class="placeholder" width="100px" height="100px">
+                                <img class="article-img" src="img/home-3.jpg">
                             </div>
                             <div class="col-9">
-                                <h4>Title</h4>
-                                <p>Description</p>
+                                <p class="article-subtitle">Spitzer Telescope<i>5 hours ago</i></p>
+                                <h5>NASA Spots Giant Debris Cloud Created by Clashing Celestial Bodies</h5>
                             </div>
                         </a>
                     </li>
                     <li>
                         <a href="#" class="row article-item">
                             <div class="col-3">
-                                <img class="placeholder" width="100px" height="100px">
+                                <img class="article-img" src="img/home-4.jpg">
                             </div>
                             <div class="col-9">
-                                <h4>Title</h4>
-                                <p>Description</p>
+                                <p class="article-subtitle">Parker Solar Probe<i>10 hours ago</i></p>
+                                <h5>NASA Mourns Passing of Visionary Heliophysicist Eugene Parker</h5>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="row article-item">
+                            <div class="col-3">
+                                <img class="article-img" src="img/home-5.jpg">
+                            </div>
+                            <div class="col-9">
+                                <p class="article-subtitle">Asteroids<i>12 hours ago</i></p>
+                                <h5>NASA System Predicts Impact of Small Asteroid</h5>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="row article-item">
+                            <div class="col-3">
+                                <img class="article-img" src="img/home-6.jpg">
+                            </div>
+                            <div class="col-9">
+                                <p class="article-subtitle">Mars<i>13 hours ago</i></p>
+                                <h5>NASA Extends Ingenuity Helicopter Mission</h5>
                             </div>
                         </a>
                     </li>
@@ -115,96 +123,69 @@
         </div>
 
         <div class="row py-5">
-            <div class="col-12 px-0">
-                <h3>Featured</h3>
-            </div>
-            <div class="card-deck">
-                <a href="#" class="card">
-                    <img class="card-img-top placeholder" width="100%" height="200px">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </a>
-                <a href="#" class="card">
-                    <img class="card-img-top placeholder" width="100%" height="200px">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </a>
-                <a href="#" class="card">
-                    <img class="card-img-top placeholder" width="100%" height="200px">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </a>
-            </div>
+            <a href="#" class="jumbotron row">
+                <div class="col-lg-6">
+                    <h3 class="jumbotron-subtitle">Women At Nasa</h3>
+                    <h2 class="jumbotron-title">NASA Observes Women’s History Month</h2>
+                    <p class="jumbotron-desc">Women are making history at NASA every day. Explore how NASA honors the past and looks to the future as we continue to drive innovation and push the envelope.</p>
+                </div>
+                <div class="col-lg-6">
+                    <img class="article-img" src="img/home-7.jpg">
+                </div>
+            </a>
         </div>
 
         <div class="row py-5">
             <div class="col-12 px-0">
-                <h3>All Stories</h3>
+                <h3 class="article-section">All Stories</h3>
             </div>
             <div class="card-columns">
                 <a href="#" class="card">
-                    <img class="card-img-top placeholder" width="100%" height="500px">
+                    <img class="article-img" src="img/home-8.jpg">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="article-subtitle">Image of the Day<i>Mar 18, 22</i></p>
+                        <h5 class="card-title">Artemis I in Moonlight</h5>
+                        <p class="card-text">Earth's Moon is seen rising behind NASA’s Space Launch System (SLS) rocket with the Orion spacecraft aboard atop a mobile launcher as it rolls out to Launch Complex 39B for the first time, Thursday, March 17, 2022, at NASA’s Kennedy Space Center in Florida.</p>
                     </div>
                 </a>
                 <a href="#" class="card">
-                    <img class="card-img-top placeholder" width="100%" height="200px">
+                    <img class="article-img" src="img/home-9.jpg">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="article-subtitle">Equinox<i>Mar 18, 2022</i></p>
+                        <h5 class="card-title">March Equinox Welcomes ‘Astronomical’ Spring</h5>
+                        <p class="card-text">Did you know our planet has two types of seasons? They are meteorological and astronomical. What’s the difference?</p>
                     </div>
                 </a>
                 <a href="#" class="card">
-                    <img class="card-img-top placeholder" width="100%" height="300px">
+                    <img class="article-img" src="img/home-10.jpg">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="article-subtitle">Spacewalk<i>Mar 16, 2022</i></p>
+                        <h5 class="card-title">NASA Astronauts Complete Spacewalk for Solar Array Work</h5>
+                        <p class="card-text">NASA astronauts Kayla Barron and Raja Chari concluded their spacewalk at 3:06 p.m. EDT after 6 hours and 54 minutes in preparation for upcoming solar array installation.</p>
                     </div>
                 </a>
                 <a href="#" class="card">
-                    <img class="card-img-top placeholder" width="100%" height="200px">
+                    <img class="article-img" src="img/home-11.jpg">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="article-subtitle">Webb Telescope<i>Mar 14, 2022</i></p>
+                        <h5 class="card-title">NASA to Discuss Progress as Webb Telescope’s Mirrors Align</h5>
+                        <p class="card-text">NASA will hold a virtual media briefing at noon EDT Wednesday, March 16, to provide an update on the James Webb Space Telescope’s mirror alignment. The briefing will air live on NASA TV, the NASA app, and the agency’s website.</p>
                     </div>
                 </a>
                 <a href="#" class="card">
-                    <img class="card-img-top placeholder" width="100%" height="200px">
+                    <img class="article-img" src="img/home-12.jpg">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="article-subtitle">Expedition 66<i>Mar 13, 2022</i></p>
+                        <h5 class="card-title">NASA to Air Briefing, Spacewalks to Upgrade Space Station</h5>
+                        <p class="card-text">Crew members from International Space Station Expedition 66 will conduct two spacewalks Tuesday, March 15, and Wednesday, March 23, to continue upgrades to the orbiting laboratory.</p>
                     </div>
                 </a>
                 <a href="#" class="card">
-                    <img class="card-img-top placeholder" width="100%" height="200px">
+                    <img class="article-img" src="img/home-13.jpg">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </a>
-                <a href="#" class="card">
-                    <img class="card-img-top placeholder" width="100%" height="300px">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="article-subtitle">Space Station Research<i>Mar 9, 2022</i></p>
+                        <h5 class="card-title">Three Space Station Studies Helping Scientists Understand the Early Universe</h5>
+                        <p class="card-text">Research conducted aboard the International Space Station is helping scientists answer questions about the formation of the universe and origins of life on Earth.</p>
                     </div>
                 </a>
             </div>
@@ -216,32 +197,29 @@
             <div class="row">
                 <div class="col-lg-4">
                     <a href="#">
-                        <img src="img/logo-red.png" height="52" alt="">
+                        <img src="img/logo-silver.png" height="52" alt="" class="center-on-mobile">
                     </a>
                 </div>
-                <div class="col-lg-8 float-lg-right">
-                    <ul class="nav wenavbar-nav">
-                        <nav class="navbar navbar-expand-lg navbar-dark ml-lg-auto">
-                            <div class="navbar-collapse" id="navbarNavFooter">
-                                <ul class="nav navbar-nav">
-                                    <li class="nav-item active">
-                                        <a class="nav-link" href="#">Home</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Missions</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Topics</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Media</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">About</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </nav>
+                <div class="col-lg-8 row">                    
+                    <ul class="social-links ml-lg-auto pl-3 pt-2 center-on-mobile">
+                        <li>
+                            <p style="display: inline;">Follow NASA</p>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fab fa-facebook"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fab fa-instagram"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fab fa-tiktok"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fab fa-youtube"></i></a>
+                        </li>
                     </ul>
                 </div>
             </div>
