Fix minor visual bugs

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </header>
 
     <div class="container py-5">
-        <div class="row py-5">
+        <div class="row p-5">
             <div class="col-lg-6">
                 <a href="#">
                     <h5 class="article-subtitle">Hubble</h5>
@@ -122,7 +122,7 @@
             </div>
         </div>
 
-        <div class="row py-5">
+        <div class="row p-5">
             <a href="#" class="jumbotron row">
                 <div class="col-lg-6">
                     <h3 class="jumbotron-subtitle">Women At Nasa</h3>
@@ -135,7 +135,7 @@
             </a>
         </div>
 
-        <div class="row py-5">
+        <div class="row p-5">
             <div class="col-12 px-0">
                 <h3 class="article-section">All Stories</h3>
             </div>
