--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </ul>
                 <form class="form-inline my-2 my-lg-0 ml-auto center-on-mobile">
                     <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search"></i></button>
-                    <input class="my-2 nav-search" type="search" placeholder="Search" aria-label="Search" style="width: auto;">
+                    <input class="my-2 p-0 nav-search" type="search" placeholder="Search" aria-label="Search" style="width: auto;">
                 </form>
             </div>
         </nav>
