Minor visual changes for mobile

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                 <ul class="article-list-ver">
                     <li>
                         <a href="#" class="row article-item">
-                            <div class="col-3">
+                            <div class="col-lg-3">
                                 <img class="article-img" src="img/home-2.jpg">
                             </div>
-                            <div class="col-9">
+                            <div class="col-lg-9">
                                 <p class="article-subtitle">Webb Telescope<i>3 hours ago</i></p>
                                 <h5>NASA’s Webb Reaches Alignment Milestone, Optics Working Successfully</h5>
                             </div>
@@ -76,10 +76,10 @@
                     </li>
                     <li>
                         <a href="#" class="row article-item">
-                            <div class="col-3">
+                            <div class="col-lg-3">
                                 <img class="article-img" src="img/home-3.jpg">
                             </div>
-                            <div class="col-9">
+                            <div class="col-lg-9">
                                 <p class="article-subtitle">Spitzer Telescope<i>5 hours ago</i></p>
                                 <h5>NASA Spots Giant Debris Cloud Created by Clashing Celestial Bodies</h5>
                             </div>
@@ -87,10 +87,10 @@
                     </li>
                     <li>
                         <a href="#" class="row article-item">
-                            <div class="col-3">
+                            <div class="col-lg-3">
                                 <img class="article-img" src="img/home-4.jpg">
                             </div>
-                            <div class="col-9">
+                            <div class="col-lg-9">
                                 <p class="article-subtitle">Parker Solar Probe<i>10 hours ago</i></p>
                                 <h5>NASA Mourns Passing of Visionary Heliophysicist Eugene Parker</h5>
                             </div>
@@ -98,10 +98,10 @@
                     </li>
                     <li>
                         <a href="#" class="row article-item">
-                            <div class="col-3">
+                            <div class="col-lg-3">
                                 <img class="article-img" src="img/home-5.jpg">
                             </div>
-                            <div class="col-9">
+                            <div class="col-lg-9">
                                 <p class="article-subtitle">Asteroids<i>12 hours ago</i></p>
                                 <h5>NASA System Predicts Impact of Small Asteroid</h5>
                             </div>
@@ -109,10 +109,10 @@
                     </li>
                     <li>
                         <a href="#" class="row article-item">
-                            <div class="col-3">
+                            <div class="col-lg-3">
                                 <img class="article-img" src="img/home-6.jpg">
                             </div>
-                            <div class="col-9">
+                            <div class="col-lg-9">
                                 <p class="article-subtitle">Mars<i>13 hours ago</i></p>
                                 <h5>NASA Extends Ingenuity Helicopter Mission</h5>
                             </div>
@@ -201,10 +201,11 @@
                     </a>
                 </div>
                 <div class="col-lg-8 row">                    
-                    <ul class="social-links ml-lg-auto pl-3 pt-2 center-on-mobile">
-                        <li>
-                            <p style="display: inline;">Follow NASA</p>
+                    <ul class="social-links pt-2 center-on-mobile ml-lg-auto">
+                        <li class="text-center w-100">
+                            <p>Follow NASA</p>
                         </li>
+                        <br>
                         <li>
                             <a href="#"><i class="fab fa-facebook"></i></a>
                         </li>
