Added Avenir Light Font

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
     </header>
 
     <div class="container py-5">
-        <div class="row p-5">
+        <div class="row px-2 py-5">
             <div class="col-lg-6">
                 <a href="#">
                     <h5 class="article-subtitle">Hubble</h5>
                     <h2>Hubble Sees the Eye of a Colorful Galaxy</h2>
                     <img class="img-fluid article-img-lg" src="img/home-1.png" width="100%">
-                    <p class="article-desc">This finely detailed image shows the heart of NGC 1097, a barred spiral galaxy that lies about 48 million light-years from Earth in the constellation Fornax. This picture reveals the intricacy of the web of stars and dust at NGC 1097’s center, with the long tendrils of dust seen in a dark red hue...<a href="javascript:void();" class="article-more"><strong>read more</strong></a></p>
                 </a>
+                <p class="article-desc">This finely detailed image shows the heart of NGC 1097, a barred spiral galaxy that lies about 48 million light-years from Earth in the constellation Fornax. This picture reveals the intricacy of the web of stars and dust at NGC 1097’s center, with the long tendrils of dust seen in a dark red hue...<a href="javascript:void();" class="article-more"><strong>read more</strong></a></p>
             </div>
             
             <div class="col-lg-6">
@@ -122,7 +122,7 @@
             </div>
         </div>
 
-        <div class="row p-5">
+        <div class="row px-4 py-5">
             <a href="#" class="jumbotron row">
                 <div class="col-lg-6">
                     <h3 class="jumbotron-subtitle">Women At Nasa</h3>
@@ -135,7 +135,7 @@
             </a>
         </div>
 
-        <div class="row p-5">
+        <div class="row px-3 py-5">
             <div class="col-12 px-0">
                 <h3 class="article-section">All Stories</h3>
             </div>
@@ -207,19 +207,19 @@
                         </li>
                         <br>
                         <li>
-                            <a href="#"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/NASA" target="_blank"><i class="fab fa-facebook"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/nasa/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fab fa-tiktok"></i></a>
+                            <a href="https://www.tiktok.com/discover/NASA?lang=en" target="_blank"><i class="fab fa-tiktok"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="https://twitter.com/NASA" target="_blank"><i class="fab fa-twitter"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fab fa-youtube"></i></a>
+                            <a href="https://www.youtube.com/c/NASA/" target="_blank"><i class="fab fa-youtube"></i></a>
                         </li>
                     </ul>
                 </div>
