--- a/article.html
+++ b/article.html
@@ -29,13 +29,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item text-center active">
+                    <li class="nav-item text-center">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item text-center">
                         <a class="nav-link" href="#">Missions</a>
                     </li>
-                    <li class="nav-item text-center">
+                    <li class="nav-item text-center active">
                         <a class="nav-link" href="#">Topics</a>
                     </li>
                     <li class="nav-item text-center">
@@ -55,23 +55,17 @@
 
     <div class="container py-5">
         <div class="row px-2 py-5">
-            <div class="col">
-                <h1 class="text-center">Welcome to NASA</h1>
-                <h2 class="text-center">For the Benefit of All</h2>
+            <div class="col-lg-8">
+                <h3>Hubble</h3>
+                <h1>Welcome to NASA</h1>
+                <h6>By NASA</h6>
+                <img class="img-fluid py-5" src="img/home-1.png" alt="">
+                <p>This finely detailed image shows the heart of NGC 1097, a barred spiral galaxy that lies about 48 million light-years from Earth in the constellation Fornax. This picture reveals the intricacy of the web of stars and dust at NGC 1097’s center, with the long tendrils of dust seen in a dark red hue</p>
+                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
+                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
             </div>
-        </div>
 
-        <div class="row px-2 py-5">
-            <div class="col-lg-6">
-                <a href="article.html">
-                    <h5 class="article-subtitle">Hubble</h5>
-                    <h2>Hubble Sees the Eye of a Colorful Galaxy</h2>
-                    <img class="img-fluid article-img-lg" src="img/home-1.png" width="100%">
-                </a>
-                <p class="article-desc">This finely detailed image shows the heart of NGC 1097, a barred spiral galaxy that lies about 48 million light-years from Earth in the constellation Fornax. This picture reveals the intricacy of the web of stars and dust at NGC 1097’s center, with the long tendrils of dust seen in a dark red hue...<a href="article.html" class="article-more"><strong>read more</strong></a></p>
-            </div>
-            
-            <div class="col-lg-6">
+            <div class="col-lg-4">
                 <h3 class="article-section">Latest</h3>
                 <ul class="article-list-ver">
                     <li>
@@ -132,21 +126,7 @@
                 </ul>
             </div>
         </div>
-
-        <div class="row px-4 py-5">
-            <a href="article.html" class="jumbotron row">
-                <div class="col-lg-6">
-                    <h3 class="jumbotron-subtitle">Women At Nasa</h3>
-                    <h2 class="jumbotron-title">NASA Observes Women’s History Month</h2>
-                    <p class="jumbotron-desc">Women are making history at NASA every day. Explore how NASA honors the past and looks to the future as we continue to drive innovation and push the envelope.</p>
-                </div>
-                <div class="col-lg-6">
-                    <img class="article-img" src="img/home-7.jpg">
-                </div>
-            </a>
-        </div>
-
-        <div class="row px-3 py-5">
+        <div class="row px-2 py-5">
             <div class="col-12 px-0">
                 <h3 class="article-section">All Stories</h3>
             </div>
