--- a/index.html
+++ b/index.html
@@ -22,32 +22,53 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
             <a class="navbar-brand" href="index.html">
-                <img src="img/logo-silver.png" height="52" alt="">
+                <img src="img/logo-silver.png" height="52" alt="" tabindex="1">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item text-center active">
+                    <li class="nav-item text-center active" tabindex="2">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link" href="#">Missions</a>
+                    <li class="nav-item dropdown text-center" tabindex="3">
+                        <a class="nav-link" href="#" id="navbarMediaDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                            Missions
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarMediaDropdown">
+                            <a class="dropdown-item" href="Missions/artemis.html">Artemis</a>
+                            <a class="dropdown-item" href="Missions/commercial-crew.html">Commercial Crew</a>
+                            <a class="dropdown-item" href="Missions/dart.html">DART</a>
+                          </div>
                     </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link" href="#">Topics</a>
+                    <li class="nav-item dropdown text-center" tabindex="4">
+                        <a class="nav-link" href="#" id="navbarMediaDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                            Topics
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarMediaDropdown">
+                            <a class="dropdown-item" href="Topics/humans-in-space.html">Humans in Space</a>
+                            <a class="dropdown-item" href="Topics/moon-to-mars.html">Moon to Mars</a>
+                            <a class="dropdown-item" href="Topics/earth.html">Earth</a>
+                          </div>
                     </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link" href="#">Media</a>
+                    <li class="nav-item dropdown text-center" tabindex="5">
+                        <a class="nav-link" href="#" id="navbarMediaDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                            Media
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarMediaDropdown">
+                            <a class="dropdown-item" href="Media/nasa-tv.html">NASA TV</a>
+                            <a class="dropdown-item" href="Media/videos.html">Videos</a>
+                            <a class="dropdown-item" href="Media/image-gallery.html">Image Gallery</a>
+                          </div>
                     </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link" href="#">About</a>
+                    <li class="nav-item text-center" tabindex="6">
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0 ml-auto center-on-mobile">
-                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search"></i></button>
-                    <input class="my-2 p-0 nav-search" type="search" placeholder="Search" aria-label="Search" style="width: auto;">
+                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search" tabindex="7"></i></button>
+                    <input class="my-2 p-0 nav-search" type="search" placeholder="Search" aria-label="Search" style="width: auto;" tabindex="8">
                 </form>
             </div>
         </nav>
