--- a/Missions/commercial-crew.html
+++ b/Missions/commercial-crew.html
@@ -87,7 +87,7 @@
         <div class="container pt-5 pb-5">
             <div class="row">
                 <div class="col-lg-4">
-                    <a href="index.html">
+                    <a href="../index.html">
                         <img src="../img/logo-silver.png" height="52" alt="" class="center-on-mobile">
                     </a>
                 </div>
@@ -116,10 +116,8 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12">
-                <a href="https://github.com/mikojimnz/DIG4172C" target="_blank"><p class="text-center text-white">Developed by DIG4172C Group 3. All Rights Reserved.</p></a>
-            </div>
+        <div class="w-100">
+            <a href="https://github.com/mikojimnz/DIG4172C" target="_blank"><p class="text-center text-white">Developed by DIG4172C Group 3. All Rights Reserved.</p></a>
         </div>
     </footer>
   
