Added NASA TV layout and page titles

--- a/Media/image-gallery.html
+++ b/Media/image-gallery.html
@@ -77,10 +77,85 @@
     <div class="container py-5">
         <div class="row px-2 py-5">
             <div class="col">
-                <h1 class="text-center">Title</h1>
-                <h2 class="text-center">Subtitle</h2>
+                <h1>Image Gallery</h1>
             </div>
         </div>
+
+        <div class="row"> 
+            <div class="col-4">
+                <a href="article.html" class="card">
+                    <img class="placeholder" width="100%" height="250px">
+                    <div class="card-body">
+                        <p class="article-subtitle">Image of the Day<i>Mar 18, 22</i></p>
+                        <h5 class="card-title">Artemis I in Moonlight</h5>
+                    </div>
+                </a>
+            </div>
+            <div class="col-4">
+                <a href="article.html" class="card">
+                    <img class="placeholder" width="100%" height="250px">
+                    <div class="card-body">
+                        <p class="article-subtitle">Image of the Day<i>Mar 18, 22</i></p>
+                        <h5 class="card-title">Artemis I in Moonlight</h5>
+                    </div>
+                </a>
+            </div>
+            <div class="col-4">
+                <a href="article.html" class="card">
+                    <img class="placeholder" width="100%" height="250px">
+                    <div class="card-body">
+                        <p class="article-subtitle">Image of the Day<i>Mar 18, 22</i></p>
+                        <h5 class="card-title">Artemis I in Moonlight</h5>
+                    </div>
+                </a>
+            </div>
+            <div class="col-4">
+                <a href="article.html" class="card">
+                    <img class="placeholder" width="100%" height="250px">
+                    <div class="card-body">
+                        <p class="article-subtitle">Image of the Day<i>Mar 18, 22</i></p>
+                        <h5 class="card-title">Artemis I in Moonlight</h5>
+                    </div>
+                </a>
+            </div>
+            <div class="col-4">
+                <a href="article.html" class="card">
+                    <img class="placeholder" width="100%" height="250px">
+                    <div class="card-body">
+                        <p class="article-subtitle">Image of the Day<i>Mar 18, 22</i></p>
+                        <h5 class="card-title">Artemis I in Moonlight</h5>
+                    </div>
+                </a>
+            </div>
+            <div class="col-4">
+                <a href="article.html" class="card">
+                    <img class="placeholder" width="100%" height="250px">
+                    <div class="card-body">
+                        <p class="article-subtitle">Image of the Day<i>Mar 18, 22</i></p>
+                        <h5 class="card-title">Artemis I in Moonlight</h5>
+                    </div>
+                </a>
+            </div>
+            <div class="col-4">
+                <a href="article.html" class="card">
+                    <img class="placeholder" width="100%" height="250px">
+                    <div class="card-body">
+                        <p class="article-subtitle">Image of the Day<i>Mar 18, 22</i></p>
+                        <h5 class="card-title">Artemis I in Moonlight</h5>
+                    </div>
+                </a>
+            </div>
+            <div class="col-4">
+                <a href="article.html" class="card">
+                    <img class="placeholder" width="100%" height="250px">
+                    <div class="card-body">
+                        <p class="article-subtitle">Image of the Day<i>Mar 18, 22</i></p>
+                        <h5 class="card-title">Artemis I in Moonlight</h5>
+                    </div>
+                </a>
+            </div>
+        </div>
+
     </div>
 
     <footer>
