--- a/Topics/humans-in-space.html
+++ b/Topics/humans-in-space.html
@@ -77,8 +77,8 @@
     <div class="container py-5">
         <div class="row px-2 py-5">
             <div class="col">
-                <h1 class="text-center">Title</h1>
-                <h2 class="text-center">Subtitle</h2>
+                <h1>Humans In Space</h1>
+                <h2>Subtitle</h2>
             </div>
         </div>
     </div>
