--- a/Media/nasa-tv.html
+++ b/Media/nasa-tv.html
@@ -75,10 +75,30 @@
     </header>
 
     <div class="container py-5">
-        <div class="row px-2 py-5">
+        <div class="row px-2 pt-5">
             <div class="col">
-                <h1 class="text-center">Title</h1>
-                <h2 class="text-center">Subtitle</h2>
+                <h1>NASA TV</h1>
+            </div>
+        </div>
+
+        <div class="row px-2 pb-5">
+            <div class="col-lg-9">
+                <img class="placeholder" width="100%" height="500px">
+                
+                <div class="row pt-3">
+                    <div class="col-lg-6 text-center">
+                        <button class="btn btn-outline-primary w-50">Public</button>
+                    </div>
+                    <div class="col-lg-6 text-center">
+                        <button class="btn btn-outline-primary w-50">Media</button>
+                    </div>
+                    <div class="col-12 pt-3">
+                        <p>description</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 pt-5 pt-lg-0">
+                <h2>Schedule</h2>
             </div>
         </div>
     </div>
