--- a/about.html
+++ b/about.html
@@ -77,8 +77,7 @@
     <div class="container py-5">
         <div class="row px-2 py-5">
             <div class="col">
-                <h1 class="text-center">Welcome to NASA</h1>
-                <h2 class="text-center">For the Benefit of All</h2>
+                <h1>About NASA</h1>
             </div>
         </div>
     </div>
