--- a/about.html
+++ b/about.html
@@ -137,10 +137,14 @@
 
         <div class="row px-2 py-5">
             <div class="col-lg-4 my-4">
-                <h4>NASA Centers and Facilities</h4>
-                <br>
-                <img src="img/about-5.jpg" alt="" class="img-fluid">
-                <div class="row pt-4">
+                <div class="uni-header">
+                    <h4>NASA Centers and Facilities</h4>
+                </div>
+                <div class="uni-content">
+                    <img src="img/about-5.jpg" alt="" class="img-fluid">
+                    <p>&nbsp;</p>
+                </div>
+                <div class="row pt-4 uni-footer">
                     <div class="col-6">
                         <button class="btn btn-primary m-1">View Map</button>
                     </div>
@@ -150,10 +154,13 @@
                 </div>
             </div>
             <div class="col-lg-4 my-4">
-                <h4>NASA and Small Businesses</h4>
-                <br>
-                <p>NASA is committed to providing all categories of small businesses an opportunity to participate in both NASA prime contracts and subcontracts. </p>
-                <div class="row pt-4">
+                <div class="uni-header">
+                    <h4>NASA and Small Businesses</h4>
+                </div>
+                <div class="uni-content">
+                    <p>NASA is committed to providing all categories of small businesses an opportunity to participate in both NASA prime contracts and subcontracts. </p>
+                </div>
+                <div class="row pt-4 uni-footer">
                     <div class="col-6">
                         <button class="btn btn-primary m-1">Programs</button>
                     </div>
@@ -163,12 +170,15 @@
                 </div>
             </div>
             <div class="col-lg-4 my-4">
-                <h4>Contact Us</h4>
-                <br>
-                <p>Public Communications Office, NASA Headquarters</p>
-                <p>300 E. Street SW, Suite 5R30<br>Washington, DC 20546</p>
-                <p>(202) 358-0001 (Office)<br>(202) 358-4338 (Fax)</p>
-                <div class="row pt-4">
+                <div class="uni-header">
+                    <h4>Contact Us</h4>
+                </div>
+                <div class="uni-content">
+                    <p>Public Communications Office, NASA Headquarters</p>
+                    <p>300 E. Street SW, Suite 5R30<br>Washington, DC 20546</p>
+                    <p>(202) 358-0001 (Office)<br>(202) 358-4338 (Fax)</p>
+                </div>
+                <div class="row pt-4 uni-footer">
                     <div class="col-12">
                         <button class="btn btn-primary m-1">Submit Question</button>
                     </div>
