Add workaround for #5 and minor styling

--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
                     <a href="#">
                         <div class="captioned-img">
                             <img src="img/about-4.jpg" alt="" class="img-fluid">
-                            <p class="img-caption"><span>OFfficials and Organizations</span></p>
+                            <p class="img-caption"><span>Officials and Organizations</span></p>
                         </div>
                     </a>
                </div>
@@ -141,15 +141,15 @@
                     <h4>NASA Centers and Facilities</h4>
                 </div>
                 <div class="uni-content">
-                    <img src="img/about-5.jpg" alt="" class="img-fluid">
+                    <img src="img/about-5.jpg" alt="" class="img-fluid ml-auto mr-auto" style="max-width: 300px">
                     <p>&nbsp;</p>
                 </div>
                 <div class="row pt-4 uni-footer">
                     <div class="col-6">
-                        <button class="btn btn-primary m-1">View Map</button>
+                        <button class="btn btn-primary btn-rounded m-1">View Map</button>
                     </div>
                     <div class="col-6">
-                        <button class="btn btn-primary m-1">Visit NASA</button>
+                        <button class="btn btn-primary btn-rounded m-1">Visit NASA</button>
                     </div>
                 </div>
             </div>
@@ -162,10 +162,10 @@
                 </div>
                 <div class="row pt-4 uni-footer">
                     <div class="col-6">
-                        <button class="btn btn-primary m-1">Programs</button>
+                        <button class="btn btn-primary btn-rounded m-1">Programs</button>
                     </div>
                     <div class="col-6">
-                        <button class="btn btn-primary m-1">Paperwork</button>
+                        <button class="btn btn-primary btn-rounded m-1">Paperwork</button>
                     </div>
                 </div>
             </div>
@@ -180,13 +180,11 @@
                 </div>
                 <div class="row pt-4 uni-footer">
                     <div class="col-12">
-                        <button class="btn btn-primary m-1">Submit Question</button>
+                        <button class="btn btn-primary btn-rounded m-1">Submit Question</button>
                     </div>
                 </div>
             </div>
         </div>
-
-    </div>
 
     <footer>
         <div class="container pt-5 pb-5">
